After appending a scene containing rigid body objects, the RigidBodyWorld and RigidBodyConstraints directories are not saved. #100255

Closed
opened 2022-08-07 03:22:05 +02:00 by Steve · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.93

Blender Version
Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: bcfdb14560
Worked: (newest version of Blender that worked as expected)

Short description of error
After appending a scene containing rigid body objects, the RigidBodyWorld and RigidBodyConstraints directories are not saved.

Exact steps for others to reproduce the error

  • Open default blender file
  • append the scene from attached file.
  • Look at the directories in the rigid body world panel.
  • Save and quit.
  • Re-open your second scene and notice the directories are now missing from the rigid body world panel. Check that they are now completely missing from the blend file.

#100255.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.93 **Blender Version** Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: `bcfdb14560` Worked: (newest version of Blender that worked as expected) **Short description of error** After appending a scene containing rigid body objects, the RigidBodyWorld and RigidBodyConstraints directories are not saved. **Exact steps for others to reproduce the error** - Open default blender file - append the scene from attached file. - Look at the directories in the rigid body world panel. - Save and quit. - Re-open your second scene and notice the directories are now missing from the rigid body world panel. Check that they are now completely missing from the blend file. [#100255.blend](https://archive.blender.org/developer/F13352054/T100255.blend)
Author

Added subscriber: @ArtyAnim

Added subscriber: @ArtyAnim
Member

Added subscribers: @mont29, @PratikPB2123

Added subscribers: @mont29, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Hi, thanks for the report. RigidBodyWorld collection is removed after reopening the file because it has zero user and is not marked as fake user.
@mont29 , will you consider it as a valid bug?

Hi, thanks for the report. RigidBodyWorld collection is removed after reopening the file because it has zero user and is not marked as fake user. @mont29 , will you consider it as a valid bug?

This issue was referenced by 500d815478

This issue was referenced by 500d815478966de6ad509c2e6a73c61fce8513a5

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Bastien Montagne self-assigned this 2022-08-25 17:22:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100255
No description provided.